IZPACK-371 put memory settings in the right place
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/trunk@2750 7d736ef5-cfd4-0310-9c9a-b52d5c14b761